--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <groupId>org.bukkit</groupId>
     <artifactId>bukkit</artifactId>
     <version>1.1-R1-CRASHCRAFT</version>
-    <name>Bukkit</name>
+    <name>CrashBukkitAPI</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
